Made SonarLint code suggestion changes